# craftint-clox

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO  build.zig  chunk.h  chunk.zig  chunk_test.c  common.h  compiler.c  compiler.h  debug.c  main.c  main.zig  memory.c  memory.h  object.c  object.h  run_tests.sh  scanner.c  scanner.h  scanner.zig  table.c  table.h  value.c  value.h  vm.c  vm.h  vm.zig  vm_test.c
.github/workflows/: c-cpp.yml
examples/: .gitignore  assert.lox  bench1_zoo.lox  class_simps.lox  closures.lox  fib.lox  functions.lox  inheritence.lox  initilisers.lox  jumping.lox  locals.lox  methods.lox  richmansobject.lox  super.lox
src/: chunk.c  chunk.h  compiler.c  compiler.h  debug.c  main.c  main.h  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
tests/: test.h  test_chunk.c  test_examples.py  test_integration.c  test_runner.c  test_scanner.c
